--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <div data-role = "page" id = "jQueryms">
+  <div data-role = "page1" id = "jQueryms1">
 
       <div data-role = "header">
         <h1>This is jQuery Mobile: Test Button Click</h1>
@@ -21,6 +21,21 @@
       <div role = "main" class = "ui-contents">
         <p>Click the button below to test the mobile site</p>
         <button id = "testButton" onclick = "alert('Testing Successfull!')" class = "ui-btn">Click</button>
+      </div>
+
+      <div data-role = "footer">
+        <h4>This is a footer</h4>
+      </div>
+  </div>
+    <div data-role = "page2" id = "jQueryms2">
+
+      <div data-role = "header">
+        <h1>This is jQuery Mobile: Test Button Click</h1>
+      </div>
+
+      <div role = "main" class = "ui-contents">
+        <p>Click the button below to test the mobile site</p>
+        <button id = "testButton" onclick = "alert('Chills!')" class = "ui-btn">Click</button>
       </div>
 
       <div data-role = "footer">
