--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <div data-role = "page1" id = "jQueryms1">
 
       <div data-role = "header">
-        <h1>This is jQuery Mobile: Test Button Click</h1>
+        <h1>Page1</h1>
       </div>
 
       <div role = "main" class = "ui-contents">
         <p>Click the button below to test the mobile site</p>
-        <button id = "testButton" onclick = "alert('Testing Successfull!')" class = "ui-btn">Click</button>
+        <a href = "https://www.youtube.com/" class = "ui-btn">Surprise-1</a>
       </div>
 
       <div data-role = "footer">
@@ -30,12 +30,12 @@
     <div data-role = "page2" id = "jQueryms2">
 
       <div data-role = "header">
-        <h1>This is jQuery Mobile: Test Button Click</h1>
+        <h1>Page2</h1>
       </div>
 
       <div role = "main" class = "ui-contents">
         <p>Click the button below to test the mobile site</p>
-        <button id = "testButton" onclick = "alert('Chills!')" class = "ui-btn">Click</button>
+        <a href = "https://www.instagram.com/" class = "ui-btn">Surprise-1</a>
       </div>
 
       <div data-role = "footer">
